# appiframe

./: index copy.html  package.json  pnpm-lock.yaml
data/1/: base.js  index.html
public/: splashscreen.html
src/: App.vue  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/datasource/: index.js
